--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "html-webpack-plugin": "^3.2.0",
     "url-loader": "^2.1.0",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.1.1"
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.11.0"
   }
 }
